2015-02-21  Arnaud Charlet  <charlet@adacore.com>

	PR ada/65156
	* gnat.dg/timing_events.adb: Removed, invalid test.

2015-02-20  Aldy Hernandez  <aldyh@redhat.com>

	PR debug/58123
	* g++.dg/debug/dwarf2/deallocator.C: Adjust for correct try
	location.
	* g++.dg/gcov/gcov-2.C: Likewise.

2015-02-20  Richard Biener  <rguenther@suse.de>

	PR tree-optimization/65136
	* gcc.dg/tree-ssa/pr65136.c: New testcase.

2015-02-20  Jakub Jelinek  <jakub@redhat.com>

	PR testsuite/64158
	* gcc.dg/pr44194-1.c: Add two extra {} pairs to fix up powerpc*-*-linux*
	and nvptx-*-* blacklisting.

	* gcc.dg/sibcall-9.c: New test.
	* gcc.dg/sibcall-10.c: New test.

2015-02-20  Kyrylo Tkachov  <kyrylo.tkachov@arm.com>

	* gcc.target/aarch64/sisd-shft-neg_1.c: New test.

2015-02-20  Georg-Johann Lay  <avr@gjlay.de>

	PR target/64452
	* gcc.target/avr/torture/pr64452.c: New test.

2015-02-19  Kaz Kojima  <kkojima@gcc.gnu.org>

	* gcc.dg/tree-ssa/20040204-1.c: Don't XFAIL on sh*-*-*.
	* gcc.dg/tree-ssa/sra-12.c: Skip for sh*-*-*.

2015-02-19  Maxim Kuvyrkov  <maxim.kuvyrkov@linaro.org>

	PR testsuite/65116
	* lib/target-supports.exp (check_compile): Check whether
	additional_sources is defined before using it.

2015-02-19  Jakub Jelinek  <jakub@redhat.com>

	PR middle-end/65074
	* g++.dg/opt/pr65074.C: New file.

2015-02-19  Andrea Azzarone  <azzaronea@gmail.com>

	* g++.dg/cpp1y/udlit-char-template-vs-std-literal-operator.C
	(size_type): New typedef.
	(operator "" _script): Use it for the last argument.

2015-02-19  Maxim Kuvyrkov  <maxim.kuvyrkov@linaro.org>

        * gcc.dg/pr64935-1.c, gcc.dg/pr64935-2.c: New tests.

2015-02-19  Maxim Kuvyrkov  <maxim.kuvyrkov@linaro.org>

	* testsuite/lib/target-supports.exp (check_compile): Save/restore
	additional_sources that may belong to an actual test.

2015-02-18  Jakub Jelinek  <jakub@redhat.com>

	PR gcov-profile/64634
	* g++.dg/gcov/gcov-15.C: New test.

2015-02-18  Tom de Vries  <tom@codesourcery.com>
