@@ -1,3 +1,7 @@
+2015-02-22  Tom de Vries  <tom@codesourcery.com>
+
+	* gcc.dg/pr30957-1.c: Make pr30957-1.c pass rather xfail.
+
 2015-02-21  Arnaud Charlet  <charlet@adacore.com>
 
 	PR ada/65156
